--- a/preamble.tex
+++ b/preamble.tex
@@ -85,6 +85,7 @@
 \newcommand{\K}{\mathbb{K}}
 \newcommand{\id}{\mathrm{id}}
 \def\H{\mathbb{H}}
+\def\h{\mathcal{H}}
 %\def{\ker}{\mathrm{ker}}
 \newcommand{\im}{\mathrm{im}}
 \newcommand{\T}{\mathbb{T}}
