--- a/sources.bib
+++ b/sources.bib
@@ -204,6 +204,32 @@ MRREVIEWER = {Ian\ Hambleton},
 MRREVIEWER = {F.\ Hirzebruch},
 }
 
+@book {eilenberg,
+    AUTHOR = {Eilenberg, Samuel and Steenrod, Norman},
+     TITLE = {Foundations of algebraic topology},
+ PUBLISHER = {Princeton University Press, Princeton, NJ},
+      YEAR = {1952},
+     PAGES = {xv+328},
+   MRCLASS = {56.0X},
+  MRNUMBER = {50886},
+MRREVIEWER = {H.\ Cartan},
+}
+
+@article {milnor,
+    AUTHOR = {Milnor, J.},
+     TITLE = {On axiomatic homology theory},
+   JOURNAL = {Pacific J. Math.},
+  FJOURNAL = {Pacific Journal of Mathematics},
+    VOLUME = {12},
+      YEAR = {1962},
+     PAGES = {337--341},
+      ISSN = {0030-8730,1945-5844},
+   MRCLASS = {55.30},
+  MRNUMBER = {159327},
+MRREVIEWER = {A.\ Heller},
+       URL = {http://projecteuclid.org/euclid.pjm/1103036730},
+}
+
 %J. Milnor. On the cobordism ring Ω∗ and a complex analogue, part i. American Journal of
 Mathematics, 82(3):505–521, 1960.
 
