mehr anmerkungen (jetzt sollten alle bisher in rot drinstehen oder schon angepasst sein)

--- a/preamble.tex
+++ b/preamble.tex
@@ -15,6 +15,7 @@
 %\usepackage{wrapfig}
 \usepackage{quiver}
 \usepackage{xcolor}
+\usepackage[nottoc, numbib]{tocbibind}
 
 
 %\usepackage{pdfsync}
