--- a/Thesis.tex
+++ b/Thesis.tex
@@ -22,13 +22,14 @@
 
 \setcounter{section}{-1}
 
+\addcontentsline{toc}{section}{Zusammenfassung}
 \section*{\todo{Zusammenfassung}}
 \todo{Hier eine deutsche Zusammenfassung der Arbeit}
 
 \section{Introduction/Motivation}
 %\includegraphics{galaxy.png}
 
-Recall the definition of homotopy groups \(\pi_n(X)\) as the set of homotopy classes of maps from the \(n\)-sphere \(S^n\) to a space \(X\). 
+Recall the definition of homotopy groups \(\pi_n(X)\) as the set of pointed homotopy classes of maps from the \(n\)-sphere \(S^n\) to a space \(X\). 
 The problem with homotopy groups is that they are, in general, hard to compute, even for simple spaces such as spheres.\\
 \todo{The general idea of bordism is to replace the \(n\)-sphere with a manifold of dimension \(n\) and to consider the homotopy classes of maps from this manifold to a space \(X\).}
 
@@ -43,19 +44,22 @@ The problem with homotopy groups is that they are, in general, hard to compute, 
 \begin{definition}[Topological manifold\ {\cite[pp.2-3]{lee}}]
     An \(n\)-dimensional \demph{topological manifold} is a topological space \(M\) such that:
     \begin{itemize}
-        \item \(M\) is Hausdorff, (i.e.\ any two distinct points can be separated by disjoint open sets),
-        \item \(M\) is second countable, (i.e.\ there exists a countable basis for the topology of \(M\)) and
-        \item \(M\) is locally Euclidean (i.e.\ every point in \(M\) has a neighbourhood homeomorphic to an open subspace of \(\mathbb{R}^n\)).
+        \item \(M\) is Hausdorff, i.e.\ any two distinct points can be separated by disjoint open sets,
+        \item \(M\) is second countable, i.e.\ there exists a countable basis for the topology of \(M\) and
+        \item \(M\) is locally Euclidean i.e.\ every point in \(M\) has a neighbourhood homeomorphic to an open subspace of \(\mathbb{R}^n\).
     \end{itemize}
     We will often write \(M^n\) for an \(n\)-dimensional manifold.\ \(n\)-dimensional manifolds are also called \demph{\(n\)-manifolds}.
 \end{definition}
+
+\todo{maybe charts here}
 
 \begin{example}
     \(\mathbb{R}^n\) is an \(n\)-dimensional topological manifold.
 \end{example}
 
 \begin{example}\label{sphere chart}
-    The \(n\)-dimensional sphere \(S^n\) is an \(n\)-dimensional topological manifold. Hausdorffness and second countability follow from \(S^n\subset \mathbb{R}^{n+1}\). For local Euclideanness, we can use the local charts \[\varphi_i^\pm:U_i:=\{(x_0,\dots,x_n)\in S^n\mid \pm x_i>0\}\to B_1^n(0)\] by \[(x_0,\dots,x_i,\dots,x_n)\mapsto(x_0,\dots,x_{i-1},x_{i+1},\dots,x_n)\]
+    The \(n\)-dimensional sphere \(S^n\) is an \(n\)-dimensional topological manifold. Hausdorffness and second countability follow from \(S^n\subset \mathbb{R}^{n+1}\). For local Euclideanness, we can use charts onto the open ball \(B_1^n(0)\)
+     \[\varphi_i^\pm:U_i:=\{(x_0,\dots,x_n)\in S^n\mid \pm x_i>0\}\to B_1^n(0)\] by \[(x_0,\dots,x_i,\dots,x_n)\mapsto(x_0,\dots,x_{i-1},x_{i+1},\dots,x_n)\]
 \end{example}
 
 \begin{nonexs}
@@ -111,7 +115,7 @@ The problem with homotopy groups is that they are, in general, hard to compute, 
     A map \(f:(M^m,\mathcal{A})\to (N^n,\mathcal{B})\) between two smooth manifolds is said to be \demph{smooth}, if for all \(p\in M\), there exists a chart \((U,\varphi)\in\mathcal{A}\) such that \(p\in U\) and \((V,\psi)\in\mathcal{B}\) such that
     \begin{itemize}
         \item \(f(U\subset V)\)
-        \item \(\psi\circ f\circ \varphi:\varphi(U)\subset \R^m\to R^n\) is smooth as a map from \(\R^m\) to \(\R^n\).
+        \item \(\psi\circ f\circ \varphi^{-1}:\varphi(U)\subset \R^m\to R^n\) is smooth as a map from \(\R^m\) to \(\R^n\).
     \end{itemize}
 \end{definition}
 
@@ -133,7 +137,7 @@ The problem with homotopy groups is that they are, in general, hard to compute, 
 \end{example}
 
 \begin{example}[Product of manifolds]
-    For smooth manifolds \(M,N\), the product \(M\times N\) is a smooth manifold with the charts\[\{(U\times V,(\varphi,\psi))\mid(U,\varphi),(V,\psi)\text{ charts of }M,N\}\]
+    For smooth manifolds \(M^m,N^n\), the product \(M\times N\) is a smooth \((m\cdot n)\)-manifold with the charts\[\{(U\times V,(\varphi,\psi))\mid(U,\varphi),(V,\psi)\text{ charts of }M,N\}\]
 \end{example}
 
 \begin{remark}
@@ -142,9 +146,11 @@ The problem with homotopy groups is that they are, in general, hard to compute, 
 
 \begin{example}
     \((\mathbb{R},[(\mathbb{R},\mathrm{id})])\) and \((\mathbb{R},[\mathbb{R},x\mapsto x^3])\) are different smooth manifolds, because the transition functions between the charts are not smooth: 
-    \(\mathrm{id}\circ{(x\mapsto x^3)}^{-1}=(x\mapsto x^{\frac13})\), hence the atlases are not equivalent.\\
-    However, they are diffeomorphic, as the map \(x\mapsto x^{\frac{1}{3}}\) is a diffeomorphism between the two manifolds: 
-    \((x\mapsto x^3)\circ (x\mapsto x^{\frac13})\circ \id^{-1}= \id\). Its inverse is given by \(x\mapsto x^3\), which is also smooth: \(\id\circ (x\mapsto x^3)\circ{(x\mapsto x^3)}^{-1}=\id\)
+    \(\mathrm{id}\circ{(x\mapsto x^3)}^{-1}=\varphi\), where
+    \[\varphi(x)=\begin{cases}x^{\frac13} & x\geq0\\ -\lvert x\rvert^{\frac13}\end{cases}\]
+    \(\varphi\) is not differentiable at 0, hence the atlases are not equivalent.\\
+    However, they are diffeomorphic, as the map \(\varphi\) is a diffeomorphism between the two manifolds: 
+    \((x\mapsto x^3)\circ \varphi\circ \id^{-1}= \id\). Its inverse is given by \(x\mapsto x^3\), which is also smooth: \(\id\circ (x\mapsto x^3)\circ{(x\mapsto x^3)}^{-1}=\id\)
 \end{example}
 
 %I am confused a bit, doesn't the diffeomorphism have to be smooth?? Check again.
@@ -154,7 +160,7 @@ The problem with homotopy groups is that they are, in general, hard to compute, 
 \end{example}
 
 \begin{definition}[Manifold with boundary\ {\cite[p.25]{lee}}]
-    To get a definition of a (smooth or topological) \demph{manifold with boundary}, replace the condition of the manifold being locally Euclidean with the condition that every point has a neighbourhood homeomorphic to an open subspace of the half space \(\mathbb{H}^n:=\{(x_1,\dots,x_n)\in\mathbb{R}\mid x_1\geq0\}\). Naturally, the charts now map into \(\H^n\) instead of \(\R^n\).
+    To define a (smooth or topological) \demph{manifold with boundary}, replace the condition of the manifold being locally Euclidean with the condition that every point has a neighbourhood homeomorphic to an open subspace of the half space \(\mathbb{H}^n:=\{(x_1,\dots,x_n)\in\mathbb{R}\mid x_1\geq0\}\). Naturally, the charts now map into \(\H^n\) instead of \(\R^n\).
 \end{definition}
 
 \begin{comment}
@@ -173,7 +179,7 @@ The problem with homotopy groups is that they are, in general, hard to compute, 
 \end{remark}
 
 \begin{definition}[Boundary\ {\cite[p.25]{lee}}]
-    Let \(M^n\) be a manifold. A point \(x\in M^n\) is called a \demph{interior point} if it admits a neighbourhood homeomorphic to \(\mathbb{R}^n\). Otherwise, it is called a \demph{boundary point}. The set of boundary points is denoted by \(\partial M\) and is called the \demph{boundary} of \(M\).\\
+    Let \(M^n\) be a manifold. A point \(x\in M^n\) is called an \demph{interior point} if it admits a neighbourhood homeomorphic to \(\mathbb{R}^n\). Otherwise, it is called a \demph{boundary point}. The set of boundary points is denoted by \(\partial M\) and is called the \demph{boundary} of \(M\).\\
     If \(M\) is compact and has empty boundary, \(M\) is called a \demph{closed manifold}. %If a manifold is compact and has non-empty boundary, it is called a \demph{compact manifold with boundary}. If a manifold is not compact, it is called an \demph{open manifold}
 \end{definition}
 
@@ -203,19 +209,28 @@ The problem with homotopy groups is that they are, in general, hard to compute, 
     Let \(M\) be a manifold. Then there exists a neighbourhood \(U\) of \(\partial M\) with a diffeomorphism \(s:\partial M\times [0,1)\to U\) with \(s(\partial M\times\{0\})=\partial M\). \(U\) is called a \demph{collar} of \(\partial M\) in \(M\).
 \end{theorem}
 
-\begin{proof}See\ \cite[p.223]{lee} for a proof.
+\begin{proof}\todo{See\ \cite[p.223]{lee} for a proof. Maybe I want Br\"ocker, tom Dieck here}
 \end{proof}
 
 \begin{observation}
     If \(\partial M\) has multiple path components, then we can find a collar for each path component.
 \end{observation}
 
+\begin{theorem}[Smooth Urysohn lemma {\cite[Exercise 2-14]{lee}}]\label{urysohn}
+    Let \(M\) be a manifold, \(A,B\subset M\) disjoint closed sets. Then, there is a smooth function \(f:M\to\R\) such that \(f\restrict{A}=0\) and \(f\restrict{B}=1\)
+.
+\end{theorem}
+
+\begin{proof}
+    \todo{this follows from the normality of manifolds and the existence of bump functions}
+\end{proof}
+
 \begin{definition}[Tangent space {\cite[p.72]{lee}}]
-    The \demph{tangent space} of a manifold \(M\) at a point \(p\in M\), denoted by \(T_p M\) is the set of equivalence classes of smooth curves \(\gamma:[-\varepsilon,\varepsilon]\to M\), \(\gamma(0)=p\) with the equivalence relation \(\gamma_1\sim\gamma_2:\Leftrightarrow\) for any smooth function defined in a neighbourhood of \(p\), we have \((f\circ\gamma_1)'(0)=(f\circ\gamma_2)'(0)\) (\(\varepsilon>0\) depends on \(\gamma\))
+    The \demph{tangent space} of a manifold \(M^n\) at a point \(p\in M\), denoted by \(T_p M\) is the set of equivalence classes of smooth curves \(\gamma:[-\varepsilon,\varepsilon]\to M\), \(\gamma(0)=p\) under the equivalence relation \(\gamma_1\sim\gamma_2:\Leftrightarrow\) for any smooth function \(f:M\to\mathbb{R}^n\) defined in a neighbourhood of \(p\), we have \((f\circ\gamma_1)'(0)=(f\circ\gamma_2)'(0)\) (\(\varepsilon>0\) depends on \(\gamma\))
 \end{definition}
 
 \begin{remark}
-    For an \(n\)-manifold, \(T_p M\) is an \(n\)-dimensional vector space over \(\R\) for every point \(p\in M\).
+    For an \(n\)-manifold, \(T_p M\) is an \(n\)-dimensional vector space over \(\R\) for every point \(p\in M\). \todo{reference}
 \end{remark}
 
 \begin{definition}[Differential {\cite[p.55]{lee}}]
@@ -230,8 +245,10 @@ The problem with homotopy groups is that they are, in general, hard to compute, 
 \end{definition}
 
 \begin{remark}
-    For a smooth map \(f:M^n\to \R\), \(r\) a regular value of \(f\), \(\{p\in M:f(p)\leq r\}=f^{-1}(-\infty,r]\) is an \(n\)-dimensional submanifold of \(M\). \(f^{-1}(r)\) is an \((n-1)\)-dimensional submanifold of \(M\).
+    For a smooth map \(f:M^n\to \R\), \(r\) a regular value of \(f\), \(\{p\in M:f(p)\leq r\}=f^{-1}(-\infty,r]\) is an \(n\)-dimensional submanifold of \(M\).\ \(f^{-1}(r)\) is an \((n-1)\)-dimensional submanifold of \(M\).\ \todo{reference}
 \end{remark}
+
+\todo{with a bit of measure theory, we can state this}
 
 \begin{theorem}[Sard's theorem\ {\cite[Theorem 6.10]{lee}}]\label{sard}
     For a smooth map \(f:M\to N\) between two manifolds, the set of critical values of \(f\) has measure zero in \(N\).
@@ -242,7 +259,7 @@ The problem with homotopy groups is that they are, in general, hard to compute, 
 \end{proof}
 
 \begin{definition}[Connected sum {\cite[Example 9.31]{lee}}]
-    For two connected manifolds \(M^n,N^n\), choose embeddings \(D^n\xrightarrow{i}M\), \(D^n\xrightarrow{j}N\). Then the connected sum of \(M\) and \(N\) is defined as
+    For two connected manifolds \(M^n,N^n\), choose smooth embeddings \(D^n\xhookrightarrow{i}M\), \(D^n\xhookrightarrow{j}N\). Then the connected sum of \(M\) and \(N\) is defined as \todo{could be done as pushout}
     \[M\#N:=((M\setminus i(\overset{\circ}{D^n}))\dis(N\setminus j(\overset{\circ}{D^n})))\big/(i(x)\sim j(x))\]
     for all \(x\in\partial D^n\).
     \begin{center}
@@ -261,9 +278,9 @@ The problem with homotopy groups is that they are, in general, hard to compute, 
 
 %\section{Bordism}
 
-One of the problems with working with manifolds is that they are, in higher dimensions, hard to classify up to homeomorphism or diffeomorphism. Bordism is a way to classify manifolds up to a weaker equivalence relation, which is \todo{easier to work with}.
+One of the problems with working with manifolds is that they are, in higher dimensions, hard to classify up to homeomorphism or diffeomorphism. Bordism is a way to classify manifolds up to a weaker equivalence relation, which is \todo{easier to work with}. \todo{maybe in introduction}
 
-\subsection{Unoriented bordism}
+\subsection{Unoriented Bordism}
 \subsubsection{Definitions}
 %Examples need to be added here, too.
 
@@ -317,8 +334,12 @@ We will refer to this relation as \demph{bordism relation}.
     \[(M,f)+(\emptyset,g) \text{ are bordant} \iff (M,f) \text{ is nullbordant}\]
 \end{remark}
 
+\begin{remark}
+    It follows that \((M,f)\) and \((N,g)\) can only be nullbordant if \(M\) and \(N\) are of the same dimension.
+\end{remark}
+
 \begin{example}[Cylinder]\label{cylinder bordism}
-    For an arbitrary \(X\), and \((M_0,f_0)=(M_1,f_1)\), we always get the cylinder as a bordism: \((M\times[0,1],f\circ\mathrm{pr}_1)\), where \(\mathrm{pr}_1\) is the projection onto the first factor.
+    For an arbitrary \(X\), and \((M,f)=(N,g)\), we always get the cylinder as a bordism: \((M\times[0,1],f\circ\mathrm{pr}_1)\), where \(\mathrm{pr}_1\) is the projection onto the first factor.
     \begin{center}
         \includegraphics[width=0.4\textwidth]{cylinder.jpg}
     \end{center}
@@ -343,7 +364,7 @@ We will refer to this relation as \demph{bordism relation}.
 %Probably to do: separating function. No
 
 \begin{example}\label{points}
-    \(\{\mathrm{pt}\}\) and \(\{\mathrm{pt}\}\dis\{\mathrm{pt}\}\) are not bordant, as \(1\)-manifolds either have 2 or 0 boundary points. Compact \(1\)-manifolds can be classified up to homeomorphism as the circle \(S^1\) (no boundary) and the interval \([0,1]\) (two boundary points).
+    \(\{\mathrm{pt}\}\) and \(\{\mathrm{pt}\}\dis\{\mathrm{pt}\}\) are not bordant, as \(1\)-manifolds either have 2 or 0 boundary points. Compact \(1\)-manifolds can be classified up to homeomorphism as the circle \(S^1\) (no boundary) and the interval \([0,1]\) (two boundary points). \unsure{reference}
 \end{example}
 
 \begin{remark}
@@ -371,8 +392,8 @@ We will refer to this relation as \demph{bordism relation}.
         By theorem\ \ref{collar}, we can find a collar of \(M_2\) in both \(B_1\) and \(B_2\). 
         %These collars glued together are homeomorphism to \(M_2\times(-1,1)\). This induces a smooth structure on the glued collar, and let \(B\setminus M_2\) inherit the smooth structure from \(B_1\) and \(B_2\). Then there exists a smooth structure on \(B\) by a previous lemma.
         Both these collars have the induced smooth structure of \(M_2\times [0,1)\). 
-        Glueing the bordisms along \(M_2\) glues the collars to something diffeomorphic to \(M_2\times (-1,1)\), as the smooth structures align in the collars. 
-        Since smoothness is local and we now have that the glueing is smooth for a open neighbourhood of \(M_2\), the whole glueing is smooth.
+        Gluing the bordisms along \(M_2\) glues the collars to something diffeomorphic to \(M_2\times (-1,1)\), as the smooth structures align in the collars. 
+        Since smoothness is local and we now have that the gluing is smooth for a open neighbourhood of \(M_2\), the whole gluing is smooth.
         \begin{center}
             \includegraphics[width=0.4\textwidth]{transitivity.jpg}
         \end{center}
@@ -400,6 +421,8 @@ We will refer to this relation as \demph{bordism relation}.
 \end{observation}
 %Observe the similarity with the definition of singular homology groups: We defined the singular homology groups as the quotient of kernel and image of some maps. Here, the same thing happens: Our map here is the boundary map.
 
+This notion only makes sense if we have an neutral element, so we can speak of a kernel. This is given by an abelian structure given in the next theorem. 
+
 \begin{theorem}[{\cite[II, Satz 2.1]{brocker}}]\label{group structure}
     The bordism groups are abelian groups with the operation \(+\) defined in definition\ \ref{bordant}:
     \[[M_1,f_1]+[M_2,f_2]=[M_1+M_2,(f_1,f_2)]\]
@@ -412,7 +435,7 @@ We will refer to this relation as \demph{bordism relation}.
     \enquote{+} is associative and commutative, because the disjoint union is associative and commutative.\\
     It is well-defined:
     Let \((M_1,f_1),(M_1^\prime,f_1^\prime)\in[M_1,f_1]\), and \((M_2,f_2),(M_2^\prime,f_2^\prime)\in[M_2,f_2]\).
-    Moreover, let \((B_1,F_1)\) and \((B_2,F_2)\) be bordisms between \((M_1,f_1)\) and \((M_1^\prime,f_2^\prime)\), respectively between \((M_2,f_2)\) and \((M_2^\prime,f_2^\prime)\). Then, a bordism between \((M_1,f_1)+(M_2,f_2)\) and \((M_1^\prime,f_1^\prime)+(M_2^\prime,f_2^\prime)\) is given by \((B_1,F_1)+(B_2,F_2)\).\\
+    Moreover, let \((B_1,F_1)\) and \((B_2,F_2)\) be bordisms between \((M_1,f_1)\) and \((M_1^\prime,f_2^\prime)\), respectively between \((M_2,f_2)\) and \((M_2^\prime,f_2^\prime)\). Then, a bordism between \((M_1,f_1)+(M_2,f_2)\) and \((M_1^\prime,f_1^\prime)+(M_2^\prime,f_2^\prime)\) is given by \((B_1,F_1)+(B_2,F_2)\). \todo{maybe more}\\
     Since being bordant is reflexive, every element is its own inverse.
 \end{proof}
 
@@ -456,14 +479,15 @@ We will refer to this relation as \demph{bordism relation}.
     \[\mathfrak{N}_\ast(X):=\bigoplus_{n\in\mathbb{Z}}\mathfrak{N}_n(X)\]
     is a \(\Z\)-graded module over \(\mathfrak{N}_\ast\). It is called the \demph{bordism module}. Explicitly, the product map acts as follows:
     \[[M]\cdot[N,f]=[M\times N, f\circ \mathrm{pr}_2]\]
-    where \(\mathrm{pr}_2:M\times N\to N\) is the projection onto the second factor.
+    where \(\mathrm{pr}_2:M\times N\to N\) is the projection onto the second factor.\\
+    This is well-defined by the above observation.
 \end{definition}
 
 \begin{remark}
     Notice that in this definition, this is a left module, but since we could just project to the first factor instead, we also get a right module structure.
 \end{remark}
 
-\subsubsection{The Eilenberg-Steenrod axioms}\label{es axioms}
+\subsubsection{The Eilenberg-Steenrod Axioms}\label{es axioms}
 The Eilenberg-Steenrod axioms are a set of axioms that characterize homology and cohomology theories.
 
 \begin{definition}[Homology theory\ {\cite[\nopp I.3]{eilenberg}}, {\cite[Definition 1.1.]{luck}}]\label{homtheo}
@@ -488,7 +512,6 @@ The Eilenberg-Steenrod axioms are a set of axioms that characterize homology and
         For the point space \(\mathrm{pt}\), we have
         \[\mathcal{H}_n(\mathrm{pt})\cong\begin{cases}R&n=0\\\{0\}&n\neq0\end{cases}\]
     \end{itemize}
-    For homology theories, the abbreviation \(\mathcal{H}_\ast=\mathcal{H}_\ast(\{\pt\})=\mathcal{H}_\ast(\{\pt\},\emptyset)\) is often used.
 \end{definition}
 
 The following axiom is often considered part of the Eilenberg-Steenrod axioms, although it was formulated by Milnor 10 years later
@@ -512,7 +535,7 @@ A proof can be found in\ \cite{milnor}, but we will not need this here.
 \end{remark}
 
 
-\subsubsection{Relative bordism}
+\subsubsection{Relative Bordism}
 
 As homology theories are defined as functors from \(\mathrm{TOP}^2\), we will extend the definition of bordism to pairs of topological spaces.
 
@@ -565,8 +588,8 @@ As homology theories are defined as functors from \(\mathrm{TOP}^2\), we will ex
 \begin{proof}
     The proof is similar to the proof of proposition\ \ref{equivalence bordant}. 
     Symmetry is clear, for reflexivity, we now also have the cylinder as stated in the above remark. 
-    For transitivity, we again glue the bordisms along their common boundary \(M_2\), but as \(M_2\) may have boundary now, we glue the bordism along a open neighbourhood \(U\) (in \(\partial B_1\) and \(\partial B_1\)) of \(M_2\). 
-    To see that this is smooth, we again look at the collars of \(\partial B_i\). This time we restrict the collars to \(U\) and see that the collars are diffeomorphic to \(M_2\times(-1,1)\). The rest of the proof is the same as in proposition\ \ref{equivalence bordant}.
+    For transitivity, we again glue the bordisms along their common boundary \(M_2\), but as \(M_2\) may have boundary now, we glue the bordism along an open neighbourhood \(U\) (in \(\partial B_1\) and \(\partial B_1\)) of \(M_2\). 
+    To see that this is smooth, we again look at the collars of \(\partial B_i\). This time we restrict the collars to \(U\) and see that the collars are diffeomorphic to \(M_2\times(-1,1)\). The rest of the proof is the same as in proposition\ \ref{equivalence bordant}. \todo{maybe more}
 \end{proof}
 
 Relative bordism groups are also defined to be the set of relative bordism classes, analogously to absolute bordism groups, but as manifolds with boundary are also allowed now, we have
@@ -576,7 +599,7 @@ on elements, it does the same as before. A product of manifolds is again a smoot
 \[\N_\ast(X,A):= \bigoplus_{n\in\Z}\N_n(X,A)\]
 over \(\N_\ast\), the relative bordism module.
 
-\begin{lemma}\ \cite[VIII, Lemma 13.10]{tomdieck}\label{almost excision} %\cite[Lemma 5.1]{zhang} \cite[Lemma 21.1.8]{dieck}
+\begin{lemma}[{\cite[VIII, Lemma 13.10]{tomdieck}}]\label{almost excision} %\cite[Lemma 5.1]{zhang} \cite[Lemma 21.1.8]{dieck}
     Let \([M,f]\in\mathfrak{N}_n(X,A)\) and \(N\) an \(n\)-dimensional submanifold of \(M\). 
     Suppose that \([N,f\restrict{N}]\in\mathfrak{N}_n(X,A)\) and \(f(M\setminus N)\subseteq A\). 
     Then \([M,f]=[N,f\restrict{N}]\) in \(\mathfrak{N}_n(X,A)\).
@@ -594,7 +617,7 @@ over \(\N_\ast\), the relative bordism module.
     %\[g(\partial B\setminus(M_0\cup N_1))=g((M_1\setminus N_1)\cup(\partial M\times I))=f(M\setminus N)\cup f(\partial M)\subseteq A\]
 \end{proof}
 
-\subsubsection{Bordism homology}
+\subsubsection{Bordism Homology}
 
 \begin{lemma}\cite[II, Satz 3.2]{brocker}\label{functoriality}
     Relative bordism is a covariant functor \[\mathfrak{N}_\ast:\mathrm{TOP}^2\to\text{graded \(\mathfrak{N}_\ast\)modules}\]
@@ -725,7 +748,7 @@ Only the excision axiom is left to check. To see the excision property, we need 
     \(K\cap\partial M\) and \(L\cap\partial M\) are still disjoint, closed in \(\partial M\), so we can find disjoint closed subsets \(K',L'\subseteq\partial M\) such that \(K\subseteq\overset{\circ}{K'}\), \(L\subseteq\overset{\circ}{L'}\). 
     We find a collar \(C\) of \(\partial M\) by theorem\ \ref{collar} and identify it with \(\partial M\times[0,1)\). 
     As \(M\) is compact, there exists a \(t\in (0,1)\) such that \(L\cap (\partial M\times [0,t))\subseteq L'\) and \(K\cap (\partial M\times [0,t))\subseteq K'\). 
-    Now \(M':=M\setminus (\partial M\times [0,t))\) is a closed \(n\)-dimensional submanifold of \(M\). By \todo{Urysohn's lemma}, there exists a smooth function \(\alpha:M'\to[0,1]\) such that \(\alpha\restrict{(K'\times \{t\})\cup (K\cap M')}=0\) and \(\alpha\restrict{(L'\times \{t\})\cup(L\cap M')}=1\). 
+    Now \(M':=M\setminus (\partial M\times [0,t))\) is a closed \(n\)-dimensional submanifold of \(M\). By Urysohn's lemma\ \ref{urysohn}, there exists a smooth function \(\alpha:M'\to[0,1]\) such that \(\alpha\restrict{(K'\times \{t\})\cup (K\cap M')}=0\) and \(\alpha\restrict{(L'\times \{t\})\cup(L\cap M')}=1\). 
     We can extend \(\alpha\) to \(M\) by \(\alpha(p,s):=\alpha(p,t)\) for \(p\in \partial M\) and \(s\in[0,t)\). 
     By theorem\ \ref{sard}, there is a regular value \(r\in(0,1)\) of \(\alpha\). 
     Then \(N:=\alpha^{-1}([0,r])=\alpha^{-1}(-\infty,r]\) is a \(n\)-dimensional closed submanifold of \(M\)%with boundary \(\partial N=\alpha^{-1}(r)\)
@@ -778,7 +801,7 @@ Only the excision axiom is left to check. To see the excision property, we need 
     We know \(\partial N\subseteq\partial B\cup(B\setminus(K\cup L))\) (lemma\ \ref{plemma2}). 
     Let \(p\in\partial N\setminus M\), then either \(p\in(B\setminus(K\cup L))\setminus M\) or \(p\in\partial B\setminus M\). In the first case, \(F(p)\in A\setminus Z\), so we are done. 
     In the second case, we know \(p\notin L\), because \(B\cap L=\emptyset\). So, \(F(p)\notin\overline{Z}\). By construction, we have \(F(\partial B\setminus M)\subseteq A\), so \(F(p)\in A\). \(\Rightarrow g(p)\in A\setminus Z\).\\
-    \todo{In total, we have shown that \((M,f), (M\cap N,f\restrict{M\cap N}), (\partial N,F\restrict{\partial N})\) are bordant, so nullbordant, since the last one is nullbordant in \(\mathfrak{N}_n(X\setminus Z,A\setminus Z)\) by \((N,F\restrict{N})\), so \([M,f]=0\) in \(\mathfrak N_n(X\setminus Z,A\setminus Z)\).}
+    In total, we have shown that \((M,f), (M\cap N,f\restrict{M\cap N}), (\partial N,F\restrict{\partial N})\) are bordant. All three are nullbordant, since \((\partial N,F\restrict{\partial N})\) is nullbordant in \(\mathfrak{N}_n(X\setminus Z,A\setminus Z)\) by \((N,F\restrict{N})\). Thus, \([M,f]=0\) in \(\mathfrak N_n(X\setminus Z,A\setminus Z)\).
 \end{proof}
 
 Now it already follows that bordism is a homology theory.\ \todo{But let's take a look at the other axioms too.}
@@ -893,6 +916,8 @@ Altogether, we have \[\N_n(S^k)\cong\N_{n-k}\oplus\N_n\].
 
 \subsection{\todo{Orientation}}
 
+We will now define additional  structure on manifolds.
+
 %\begin{definition}[Tangent space]
 %\end{definition}
 %I probably need this already before. (Along with tangent bundle, vector fields), done, but not bundle/field
@@ -921,7 +946,7 @@ Altogether, we have \[\N_n(S^k)\cong\N_{n-k}\oplus\N_n\].
 
 %Check again
 %\begin{definition}[Continuous orientation]
-%    A pointwise orientation on a manifold \(M\) is called \demph{continuous}, if for every point \(p\in M\), there exists a neighborhood \(U\) of \(p\) such that the orientations on the tangent spaces of all points in \(U\) are equivalent.
+%    A pointwise orientation on a manifold \(M\) is called \demph{continuous}, if for every point \(p\in M\), there exists a neighbourhood \(U\) of \(p\) such that the orientations on the tangent spaces of all points in \(U\) are equivalent.
 %\end{definition}
 
 \begin{definition}[Orientation on manifolds\ {\cite[p.380]{lee}}]
@@ -943,7 +968,7 @@ Altogether, we have \[\N_n(S^k)\cong\N_{n-k}\oplus\N_n\].
 
 %Maybe I should say something about orientations covers\dots
 
-\subsection{Oriented bordism}
+\subsection{Oriented Bordism}
 
 \subsubsection{Definitions}
 %Probably I should use less confusing notations (e.g.\ \(M^-\) instead of \(M\)).
@@ -972,7 +997,7 @@ The proof can be copied from the proof of proposition\ \ref{equivalence bordant}
     \begin{itemize}
         \item \textbf{Symmetry}: If \((B,F)\) is an oriented bordism between \((M,f)\) and \((N,g)\), then \((B^-,F)\) (again, the negative sign is denoting the opposite orientation) is an oriented bordism between \((N,g)\) and \((M,f)\).
         \item \textbf{Reflexivity}: The cylinder still works as the proof of reflexivity here. We have defined oriented bordism in this way with giving one side the opposite orientation, so the cylinder is still a bordism. \(\partial(M\times [0,1])=M\dis M^-\).
-        \item \textbf{Transitivity}: The glueing of the manifolds has to be orientation preserving now. Let there be bordisms \((B_1,F_1)\) between \((M_1,f_1)\) and \((M_2,f_2)\), and \((B_2,F_2)\) between \((M_2,f_2)\) and \(M_3,f_3\). Focus on \((M_2,f_2)\), where the glueing happens. Since \(M_2\subset B_1\) has negative orientation and \(M_2\subset B_2\) has positive orientation, so the glueing we had before respects the orientation.
+        \item \textbf{Transitivity}: The gluing of the manifolds has to be orientation preserving now. Let there be bordisms \((B_1,F_1)\) between \((M_1,f_1)\) and \((M_2,f_2)\), and \((B_2,F_2)\) between \((M_2,f_2)\) and \(M_3,f_3\). Focus on \((M_2,f_2)\), where the gluing happens. Since \(M_2\subset B_1\) has negative orientation and \(M_2\subset B_2\) has positive orientation, so the gluing we had before respects the orientation.
         \begin{center}
         \includegraphics[width=0.6\textwidth]{ortransitivity.jpg}
         \end{center}
@@ -1007,13 +1032,13 @@ The graded ring \(\Omega_\ast\) and the graded module \(\Omega_\ast(X)\) are def
 
 %I still need to see that this is ok with the orientation.
 
-\subsubsection{Relative oriented bordism}
+\subsubsection{Relative Oriented Bordism}
 
 The path from absolute oriented bordism to relative oriented bordism is exactly the same as in the unoriented case. We just always need to remember that we reverse the orientations for the second singular oriented manifold. Relative oriented bordism extends the equivalence relation to not necessarily closed singular oriented manifolds.
 
 Again, \(\Omega_n(X,A)\) is not a \(\mathbb{F}_2\)-vector space. So we get a more complicated homology theory now.
 
-\subsubsection{Oriented bordism homology}
+\subsubsection{Oriented Bordism Homology}
 
 \begin{lemma}
     Relative oriented bordism is a covariant functor
@@ -1269,7 +1294,7 @@ Maybe it is enough to just say that these are called this way because the Grassm
 So, proving theorem\ \ref{spectrum cohomology} gives us that cobordism defines a cohomology theory. Again, we need to check axioms.\\
 Proving theorem\ \ref{spectrum cohomology} will be the goal of\ \ref{cohomology}
 
-\subsubsection{\todo{The Eilenberg-Steenrod axioms}}
+\subsubsection{\todo{The Eilenberg-Steenrod Axioms}}
 To get a the axioms for cohomology theories, intuitively, we \enquote{reverse all arrows} in the previously defined axioms for homology theories in\ \ref{es axioms}.
 
 \begin{definition}[Cohomology theory\ {\cite[Definition 5.2]{luck}}]
@@ -1289,7 +1314,7 @@ To get a the axioms for cohomology theories, intuitively, we \enquote{reverse al
     \end{itemize}
 \end{definition}
 
-\subsubsection{Bordism cohomology}\label{cohomology}
+\subsubsection{Bordism Cohomology}\label{cohomology}
 To prove theorem\ \ref{spectrum cohomology}, we will check the axioms one by one. For this section, we will fix a spectrum \(\underline{E}\), and \(\h^\ast\) will be the associated map, as defined in theorem\ \ref{spectrum cohomology}.
 
 \begin{lemma}[Functoriality]\label{cofunctoriality}
@@ -1354,6 +1379,8 @@ Conclude:
 \begin{theorem}[Bordism cohomology theory]
 \end{theorem}
 
+\subsection{Duality to Bordism Homology}
+
 %\subsubsection{Calculations}
 
 %\todo{I could cite the original axioms of Eilenberg-Steenrod\ \ref{eilenberg}}
@@ -1362,5 +1389,7 @@ Conclude:
 
 %\section{Pontryagin-Thom Construction}
 
-\newpage\printbibliography%
+\newpage
+\addcontentsline{toc}{section}{References}
+\printbibliography%
 \end{document}
